this thing is pain in the fucking ass

--- a/app/branslar/branslar/fizik.mdx
+++ b/app/branslar/branslar/fizik.mdx
@@ -4,6 +4,13 @@ description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca fizik olimp
 tags: [fizik, olimpiyatlar]
 ---
 
-- amogus
+## Fizik Olimpiyatları İçin Önerilen Dış Kaynaklar
 
-## amogus
+- Introduction to Optics (Frank L. Pedrotti, Leno M. Pedrotti, Leno S. Pedrotti)
+- Introduction to Electrodynamics (David J. Griffiths)
+- Introduction to Solid State Physics (Charles Kittel)
+- Introduction to Classical Mechanics (David Morin)
+
+## Fizik Olimpiyatları İçin Önerilen Problem Arşivleri
+
+- Yakında eklenilecektir.
