--- a/app/branslar/branslar/astrofizik.mdx
+++ b/app/branslar/branslar/astrofizik.mdx
@@ -2,4 +2,5 @@
 title: Astrofizik
 description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca astrofizik olimpiyatı için hazırlanan kaynaklar ve dış kaynaklar yer almaktadır.
 tags: [astrofizik, olimpiyatlar]
+biome: jungle
 ---
