--- a/app/branslar/branslar/bilgisayar.mdx
+++ b/app/branslar/branslar/bilgisayar.mdx
@@ -2,4 +2,5 @@
 title: Bilgisayar
 description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca bilgisayar olimpiyatı için hazırlanan kaynaklar ve dış kaynaklar yer almaktadır.
 tags: [bilgisayar, olimpiyatlar]
+biome: cherry
 ---
