--- a/app/branslar/branslar/felsefe.mdx
+++ b/app/branslar/branslar/felsefe.mdx
@@ -2,4 +2,5 @@
 title: Felsefe
 description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca felsefe olimpiyatı için hazırlanan kaynaklar ve dış kaynaklar yer almaktadır.
 tags: [felsefe, olimpiyatlar]
+biome: basalt
 ---
