--- a/app/branslar/branslar/fizik.mdx
+++ b/app/branslar/branslar/fizik.mdx
@@ -2,6 +2,7 @@
 title: Fizik
 description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca fizik olimpiyatı için hazırlanan kaynaklar ve dış kaynaklar yer almaktadır.
 tags: [fizik, olimpiyatlar]
+biome: grove
 ---
 
 ## Fizik Olimpiyatları İçin Önerilen Dış Kaynaklar
