--- a/app/branslar/branslar/kimya.mdx
+++ b/app/branslar/branslar/kimya.mdx
@@ -2,4 +2,5 @@
 title: Kimya
 description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca kimya olimpiyatı için hazırlanan kaynaklar ve dış kaynaklar yer almaktadır.
 tags: [kimya, olimpiyatlar]
+biome: dripstone
 ---
