--- a/app/branslar/branslar/linguistik.mdx
+++ b/app/branslar/branslar/linguistik.mdx
@@ -2,4 +2,5 @@
 title: Linguistik
 description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca linguistik olimpiyatı için hazırlanan kaynaklar ve dış kaynaklar yer almaktadır.
 tags: [linguistik, olimpiyatlar]
+biome: desert
 ---
