--- a/app/branslar/branslar/biyoloji.mdx
+++ b/app/branslar/branslar/biyoloji.mdx
@@ -2,4 +2,5 @@
 title: Biyoloji
 description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca biyoloji olimpiyatı için hazırlanan kaynaklar ve dış kaynaklar yer almaktadır.
 tags: [biyoloji, olimpiyatlar]
+biome: birch
 ---
