--- a/app/branslar/branslar/ekonomi.mdx
+++ b/app/branslar/branslar/ekonomi.mdx
@@ -2,4 +2,5 @@
 title: Ekonomi
 description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca ekonomi olimpiyatı için hazırlanan kaynaklar ve dış kaynaklar yer almaktadır.
 tags: [ekonomi, olimpiyatlar]
+biome: savannah
 ---
