--- a/app/branslar/branslar/matematik.mdx
+++ b/app/branslar/branslar/matematik.mdx
@@ -2,4 +2,5 @@
 title: Matematik
 description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca matematik olimpiyatı için hazırlanan kaynaklar ve dış kaynaklar yer almaktadır.
 tags: [matematik, olimpiyatlar]
+biome: badlands
 ---
