blog and pagination

--- a/app/branslar/branslar/bilgisayar.mdx
+++ b/app/branslar/branslar/bilgisayar.mdx
@@ -4,3 +4,5 @@ description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca bilgisayar 
 tags: [bilgisayar, olimpiyatlar]
 biome: cherry
 ---
+
+Bilgisayar olimpiyatları için en çok kullanılan dış kaynaklar [Atcoder](/blog/atcoder-kullanimi) ve [Codeforces](/blog/codeforces-kullanimi)'dır.
