blog posts page with cards

--- a/app/blog/postlar/codeforces-kullanimi.mdx
+++ b/app/blog/postlar/codeforces-kullanimi.mdx
@@ -4,6 +4,7 @@ description: Codeforces platformun nasıl bilgisayar olimpiyatında kendini geli
 tags: [bilgisayar, codeforces, olimpiyat]
 date: 2024-06-26
 authors: [{ name: 'Kerem Emre Güner', url: 'https://terracottalite.neocities.org/' }, { name: 'Mehmet Kutay Bozkurt', url: 'https://www.mkutay.dev' }]
+excerpt: "[Codeforces](https://codeforces.com), bilgisayar olimpiyatı platformlarının kullanıcı sayısı olarak en büyüğüdür. Sık sık yarışmalar düzenlemekte ve problem kütüphanesinde neredeyse 15000 problem bulunmaktadır."
 ---
 
 [Codeforces](https://codeforces.com), bilgisayar olimpiyatı platformlarının kullanıcı sayısı olarak en büyüğüdür. Sık sık yarışmalar düzenlemekte ve problem
