--- a/app/blog/postlar/atcoder-kullanimi.mdx
+++ b/app/blog/postlar/atcoder-kullanimi.mdx
@@ -4,6 +4,7 @@ description: Atcoder platformun nasıl bilgisayar olimpiyatında kendini gelişt
 tags: [bilgisayar, atcoder, olimpiyat]
 date: 2024-06-26
 authors: [{ name: 'Kerem Emre Güner', url: 'https://terracottalite.neocities.org/' }, { name: 'Mehmet Kutay Bozkurt', url: 'https://www.mkutay.dev' }]
+excerpt: "[AtCoder](https://atcoder.jp), Japonlarn bilgisayar olimpiyatı platformu. Matematik ağırlıklı sorularıyla da bilinir. Neredeyse her hafta yarışma düzenlenir."
 ---
 
 [AtCoder](https://atcoder.jp), Japonlarn bilgisayar olimpiyatı platformu. Matematik ağırlıklı sorularıyla da bilinir. Neredeyse her hafta yarışma düzenlenir.
