--- a/app/blog/postlar/atcoder-kullanimi.mdx
+++ b/app/blog/postlar/atcoder-kullanimi.mdx
@@ -1,5 +1,5 @@
 ---
-title: Atcoder Kullanımı
+title: Bilgisayar Olimpiyatları İçin Atcoder Kullanımı
 description: Atcoder platformun nasıl bilgisayar olimpiyatında kendini geliştirmek için kullanılabilinmektedir?
 tags: [bilgisayar, atcoder, olimpiyat]
 date: 2024-06-26
