--- a/app/blog/postlar/codeforces-kullanimi.mdx
+++ b/app/blog/postlar/codeforces-kullanimi.mdx
@@ -1,5 +1,5 @@
 ---
-title: Codeforces Kullanımı
+title: Bilgisayar Olimpiyatları İçin Codeforces Kullanımı
 description: Codeforces platformun nasıl bilgisayar olimpiyatında kendini geliştirmek için kullanılabilinmektedir?
 tags: [bilgisayar, codeforces, olimpiyat]
 date: 2024-06-26
