--- a/app/branslar/branslar/bilgisayar.mdx
+++ b/app/branslar/branslar/bilgisayar.mdx
@@ -6,3 +6,5 @@ biome: cherry
 ---
 
 Bilgisayar olimpiyatları için en çok kullanılan dış kaynaklar [Atcoder](/blog/atcoder-kullanimi) ve [Codeforces](/blog/codeforces-kullanimi)'dır.
+
+- [Competitive Programmer's Handbook](https://cses.fi/book/book.pdf)
