--- a/app/branslar/branslar/kimya.mdx
+++ b/app/branslar/branslar/kimya.mdx
@@ -4,3 +4,37 @@ description: Türkiye Bilim Olimpiyatları Mezunları Topluluğu'nca kimya olimp
 tags: [kimya, olimpiyatlar]
 biome: dripstone
 ---
+# Kitap Kaynaklar
+
+## Organik Kimya
+- Petrucci Genel Kimya Palme Yayınları
+- Solomons’ Organic Chemistry
+- Clayden’s Organic Chemistry
+
+## Fizikokimya
+- Atkins’s Physical Chemistry
+
+## Analitik Kimya
+
+## İnorganik Kimya
+
+# Problemler
+R/S Pratiği yapabileceğiniz bir site. Üstelik tüm kuralları baştan öğrenmek için de oldukça faydalı. Renkli arayüzü ile tüm süreci eğlenceli kılıyor.
+- [RS Chem](https://rschemistry.com/)
+
+Soru formatında inceleyebileceğiniz Organik Kimya Total Sentez çalışmaları.
+- [Sentez Problemleri DKFZ](https://dkfz.de/en/drugs/Synthesis_Quiz.html)
+- [Sentez Problemleri Trauner](https://www.traunergroup.org/denksport)
+- [Sentez Problemleri EPFL](https://www.epfl.ch/labs/lcso/synthesis-problems/)
+
+Yüzlerce organik molekülün total sentezi için en kapsamlı sitelerden biri. Arayabileceğiniz moleküllerin neredeyse hepsi bulunuyor. Basamak basamak sentezleri incelemek mümkün.
+- [Data Organic Chemistry Total Sentez](https://organicchemistrydata.org/hansreich/resources/syntheses/?page=abscisic-acid-constantino%2F)
+
+Organik kimyacıların taptığı total sentez sitesi. Şu an itibariyle yaklaşık 3500 sentez barındırıyor ve hepsini hem soru hem çözüm formatında görmek, ayrıca ilgili makalelere erişmeye de olanak sağlıyor.
+- [Sentez Arizona Universitesi](https://chemistrybydesign.oia.arizona.edu/app/)
+
+NMR ve Spektroskopi çalışmaları
+- [NMR Challenge](https://nmr-challenge.uochb.cas.cz/)
+- [NMR Tips](https://www.nmr.tips/indexe.html)
+- [Interaktif Streskopy Problemleri](https://www.chem.ucalgary.ca/courses/353/WebContent/spectroscopy/index.html)
+
