some fixes to atcoder post

--- a/app/blog/postlar/atcoder-kullanimi.mdx
+++ b/app/blog/postlar/atcoder-kullanimi.mdx
@@ -1,6 +1,6 @@
 ---
 title: Bilgisayar Olimpiyatları İçin AtCoder Kullanımı
-description: AtCoder platformu bilgisayar olimpiyatında kendini geliştirmek için nasıl kullanılabilir?
+description: AtCoder platformu bilgisayar olimpiyatında gelişmek için nasıl kullanılabilir?
 tags: [bilgisayar, atcoder, olimpiyat]
 date: 2024-06-26
 authors: [{ name: 'Kerem Emre Güner', url: 'https://terracottalite.neocities.org/' }, { name: 'Mehmet Kutay Bozkurt', url: 'https://www.mkutay.dev' }]
@@ -13,7 +13,7 @@ Sitede neredeyse her hafta yarışma düzenlenmektedir.
 
 # Hesap Açmak
 
-İlk önce [bu](https://atcoder.jp/register) linkteki sağ üstte bulunan "Sign Up" butonuna tıklayarak ve kendinize bir 
+İlk önce [bu](https://atcoder.jp/register) linkteki sağ üstte bulunan "Sign Up" butonuna tıklayarak kendinize bir 
 kullanıcı adı belirlemelisiniz.
 Aklınızda bulundurun ki kullanıcı adı en az 3 ve en fazla 16 adet karakterden oluşmasının yanında, sayı veya alt çizgi de içermelidir.
 Kullanıcı adınızı belirledikten sonra e-posta, şifre gibi gerekli kısımları doldurarak ve mavi "Sign Up" butonuna tıklayarak 
