--- a/app/blog/postlar/atcoder-kullanimi.mdx
+++ b/app/blog/postlar/atcoder-kullanimi.mdx
@@ -3,7 +3,7 @@ title: Bilgisayar Olimpiyatları İçin AtCoder Kullanımı
 description: AtCoder platformu bilgisayar olimpiyatında gelişmek için nasıl kullanılabilir?
 tags: [bilgisayar, atcoder, olimpiyat]
 date: 2024-06-26
-authors: [{ name: 'Kerem Emre Güner', url: 'https://terracottalite.neocities.org/' }, { name: 'Mehmet Kutay Bozkurt', url: 'https://www.mkutay.dev' }]
+authors: [{ name: 'Kerem Emre Güner', url: 'https://terracottalite.neocities.org/' }, { name: 'Mehmet Kutay Bozkurt', url: 'https://www.mkutay.dev' }, { name: 'Ayça Gülşen Al', url: 'mailto:agulsenal@gmail.com' ]
 excerpt: "[AtCoder](https://atcoder.jp), matematik ağırlıklı problemleriyle bilinen Japonya temelli bir bilgisayar olimpiyatı platformudur. Sitede neredeyse her hafta yarışma düzenlenmektedir."
 ---
 [AtCoder](https://atcoder.jp), matematik ağırlıklı problemleriyle bilinen Japonya temelli bir bilgisayar olimpiyatı platformudur.
@@ -146,9 +146,13 @@ tıklayabilirsiniz.
 
 ![arc post](/fotograflar/blog/atcoder-kullanimi/arc-post.png)
 
-Contest ekranında "Register" veya "Rated Register"a tıklayınız. Sayfa
+Contest sayfasında "Register" veya "Rated Register"a tıklayınız. Sayfa
 yüklendiğinde gelen formu doldurmanıza gerek yoktur aşağı inip mavi
 register tuşuna basabilirsiniz.
+
+![Tasks](/fotograflar/blog/atcoder-kullanimi/tasks.png)
+
+Contest başladığında contest sayfasına üst panelden "Tasks" kısmına tıklayabilir ve oradaki problemleri çözmeye başlayabilirsiniz. GLHF (good luck and have fun)!
 
 **NOT:** Eğer seçeneği varsa "Unrated Register" da olabilirsiniz. Bunu
 yapmanız durumunda yarışma sizin ratinginizi değiştirmeyecektir.
