--- a/app/blog/postlar/atcoder-kullanimi.mdx
+++ b/app/blog/postlar/atcoder-kullanimi.mdx
@@ -3,7 +3,7 @@ title: Bilgisayar Olimpiyatları İçin AtCoder Kullanımı
 description: AtCoder platformu bilgisayar olimpiyatında gelişmek için nasıl kullanılabilir?
 tags: [bilgisayar, atcoder, olimpiyat]
 date: 2024-06-26
-authors: [{ name: 'Kerem Emre Güner', url: 'https://terracottalite.neocities.org/' }, { name: 'Mehmet Kutay Bozkurt', url: 'https://www.mkutay.dev' }, { name: 'Ayça Gülşen Al', url: 'mailto:agulsenal@gmail.com' ]
+authors: [{ name: 'Kerem Emre Güner', url: 'https://terracottalite.neocities.org/' }, { name: 'Mehmet Kutay Bozkurt', url: 'https://www.mkutay.dev' }, { name: 'Ayça Gülşen Al', url: 'mailto:agulsenal@gmail.com' } ]
 excerpt: "[AtCoder](https://atcoder.jp), matematik ağırlıklı problemleriyle bilinen Japonya temelli bir bilgisayar olimpiyatı platformudur. Sitede neredeyse her hafta yarışma düzenlenmektedir."
 ---
 [AtCoder](https://atcoder.jp), matematik ağırlıklı problemleriyle bilinen Japonya temelli bir bilgisayar olimpiyatı platformudur.
